<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/bottom_menu_home_d"
        android:enabled="true"
        android:title="@string/bottom_menu_home_text" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/bottom_menu_schedule_d"
        android:enabled="true"
        android:title="@string/bottom_menu_schedule_text" />

    <item
        android:id="@+id/navigation_meal_plan"
        android:icon="@drawable/bottom_menu_meal_plan_d"
        android:enabled="true"
        android:title="@string/bottom_menu_meal_plan_text" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/bottom_menu_plan_d"
        android:enabled="true"
        android:title="@string/bottom_menu_plan_text" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_menu_profile_d"
        android:enabled="true"
        android:title="@string/bottom_menu_profile_text" />

</menu>