<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frameArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.schedule.EditSubjectFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dialog_background_color">

            <ImageView
                android:id="@+id/bottomSheetIc"
                android:layout_width="60dp"
                android:layout_height="10dp"
                android:layout_marginTop="15dp"
                android:src="@drawable/radius_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <!-- 닫기 아이콘 -->
        <ImageView
            android:id="@+id/editSubjectIcBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:src="@drawable/ic_school_name_x"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <!-- 과목 영역 -->
            <RelativeLayout
                android:id="@+id/subjectArea"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <!-- 과목 이미지 -->
                <ImageView
                    android:id="@+id/subjectAreaImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/radius_gray8_rectangle"
                    android:scaleType="fitCenter" />

                <!-- 과목 텍스트 -->
                <TextView
                    android:id="@+id/subjectText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/pretendard"
                    android:text=""
                    android:textColor="@color/text_color_main_to_dark_main"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </RelativeLayout>

            <!-- 과목 삭제 영역 -->
            <FrameLayout
                android:id="@+id/deleteSubjectArea"
                android:layout_width="103dp"
                android:layout_height="38dp"
                android:background="@drawable/border_gray_radius_white_rectangle"
                android:layout_marginTop="48dp"
                android:layout_marginLeft="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/subjectArea">

                <!-- 과목 삭제 이미지 -->
                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_schedule_delete"
                    android:layout_marginStart="13dp"
                    android:layout_gravity="center_vertical|start" />

                <!-- 과목 삭제 텍스트 -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subject_delete_text"
                    android:textSize="14sp"
                    android:textColor="@color/text_color_main_to_white"
                    android:fontFamily="@font/pretendard"
                    android:layout_marginStart="35dp"
                    android:layout_gravity="center_vertical|start" />
            </FrameLayout>

            <!-- 과목명 수정 텍스트-->
            <TextView
                android:id="@+id/editSubjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginLeft="20dp"
                android:text="@string/edit_subject_text"
                android:textColor="@color/ic_color_black"
                android:textSize="18sp"
                android:fontFamily="@font/pretendard_extrabold"
                app:layout_constraintTop_toBottomOf="@id/subjectArea"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- 과목명 입력 에딧 텍스트-->
            <EditText
                android:id="@+id/editSubjectNameEdit"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/edit_subject_hint_text"
                android:fontFamily="@font/pretendard"
                android:textColor="@color/ic_color_black"
                android:textColorHint="#C0C0C0"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                android:paddingLeft="15dp"
                android:background="@drawable/edittext_border_gray"
                app:layout_constraintTop_toBottomOf="@+id/editSubjectName" />

            <!-- 배경색 지정 텍스트-->
            <TextView
                android:id="@+id/editSubjectInputName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:layout_marginLeft="20dp"
                android:text="@string/add_subject_background_text"
                android:textColor="@color/ic_color_black"
                android:textSize="18sp"
                android:fontFamily="@font/pretendard_extrabold"
                app:layout_constraintTop_toBottomOf="@id/editSubjectNameEdit"
                app:layout_constraintStart_toStartOf="parent" />

            <!-- 배경색 지정 선택 스피너 -->
            <Spinner
                android:id="@+id/editSubjectClassSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_spinner_gray7"
                android:overlapAnchor="false"
                android:textAlignment="textStart"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editSubjectInputName" />
            <!-- 선택 완료 버튼-->
            <Button
                android:id="@+id/editSubjectSelectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_blue_button_transparency_30"
                android:text="@string/edit_subject_button_text"
                android:fontFamily="@font/pretendard"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>