<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/frameArea"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.plan.TodoCompleteDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_blue">

            <ImageView
                android:id="@+id/completeIc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_todo_complete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/completeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_complete_dialog_guide_text"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:fontFamily="@font/pretendard"
                app:layout_constraintTop_toBottomOf="@id/completeIc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal" />

            <!-- 아니요 영역 -->
            <RelativeLayout
                android:id="@+id/noButtonArea"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                app:layout_constraintTop_toBottomOf="@id/completeText"
                app:layout_constraintStart_toStartOf="parent">

                <!-- 아니요 이미지 -->
                <ImageView
                    android:id="@+id/noButtonImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_blue"
                    android:scaleType="fitCenter" />

                <!-- 아니요 텍스트 -->
                <TextView
                    android:id="@+id/noButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/pretendard"
                    android:text="@string/complete_dialog_button_no_text"
                    android:textColor="@color/main_color"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </RelativeLayout>

            <!-- 예 영역 -->
            <RelativeLayout
                android:id="@+id/yesButtonArea"
                android:layout_width="130dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                app:layout_constraintTop_toBottomOf="@id/completeText"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- 예 이미지 -->
                <ImageView
                    android:id="@+id/yestButtonImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/bg_blue_fill"
                    android:scaleType="fitCenter" />

                <!-- 예 텍스트 -->
                <TextView
                    android:id="@+id/yesButtonText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/pretendard"
                    android:text="@string/complete_dialog_button_yes_text"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="14sp" />
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>

